[update] update env expamle

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,9 @@ DB_NAME=DB_NAME
 DB_SSLMODE=disable
 JWT_SECRET=mysecretkey
 DEFAULT_PASSWORD=DEFAULT_PASSWORD
+EMAIL_HOST
+EMAIL_PORT
+EMAIL_USERNAME
+EMAIL_PASSWORD
+EMAIL_FROM_NAME
 DRIVE_FOLDER=""
